# GeoBase

./: .gitignore  CMakeLists.txt  GeoBase.slnx  GeoBase.vcxproj  GeoBase.vcxproj.filters  README.md  Renderer.h  Viewer.cpp  Viewer.h  新建文本文档.txt
GeoBase/: GeoBase.vcxproj  GeoBase.vcxproj.filters  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  TestMatrix3.cpp  TestMatrix4.cpp  TestQuaternion.cpp  TestVector3.cpp  Vector3.h  main.cpp
GeoBase/x64/Debug/: GeoBase.exe.recipe  GeoBase.vcxproj.FileListAbsolute.txt  vc145.idb
include/GeoBase/: AABB.h  Common.h  GeometryCommon.h  Matrix3.h  Matrix4.h  Plane.h  Quaternion.h  Ray.h  Triangle3.h  Vector3.h
src/: AABB.cpp  Matrix3.cpp  Matrix4.cpp  Plane.cpp  Quaternion.cpp  Ray.cpp  Renderer.cpp  Triangle3.cpp  main.cpp  viewer.cpp
tests/: TestAABB.cpp  TestMatrix3.cpp  TestMatrix4.cpp  TestPlane.cpp  TestQuaternion.cpp  TestRay.cpp  TestTriangle3.cpp  TestVector3.cpp
